# DiaCleanCustomer

./: .firebaserc  CMakeLists.txt  README.md  android.rar  delivery_customer_white_label.cpp  firebase.json  flutter_jank_metrics_01.json  pubspec.yaml
.firebase/: hosting.YnVpbGRcd2Vi.cache
ios/: firebase_app_id_file.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/app/: app_widget.dart
lib/app/constants/: .env.dart  properties.dart
lib/app/core/models/: additional_model.dart  address_model.dart  ads_model.dart  agent_model.dart  app_theme_preferences.dart  cart_model.dart  order_model.dart  seller_model.dart  transaction_model.dart
lib/app/modules/address/: address_module.dart  address_page.dart  address_store.dart
lib/app/modules/cart/: cart_module.dart  cart_page.dart  cart_store.dart
lib/app/modules/home/: home_module.dart  home_page.dart  home_store.dart
lib/app/modules/main/: main_module.dart  main_page.dart  main_store.dart
lib/app/modules/messages/: messages_page.dart  messages_store.dart
lib/app/modules/orders/: orders_module.dart  orders_page.dart  orders_store.dart
lib/app/modules/payment/: payment_module.dart  payment_page.dart  payment_store.dart
lib/app/modules/product/: product_module.dart  product_page.dart  product_store.dart
lib/app/modules/profile/: profile_module.dart  profile_page.dart  profile_store.dart
lib/app/shared/: color_theme.dart  utilities.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+136 files in other folders)
